syntax = "proto3";
import "google/protobuf/Timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;


service CompanyJobService{
	
rpc GetCompanyJob(CompanyJobIdRequest) returns (CompanyJob);
rpc GetCompanyJobs(google.protobuf.Empty) returns (CompanyJobs);
rpc AddCompanyJob(CompanyJobs) returns (google.protobuf.Empty);
rpc UpdateCompanyJob(CompanyJobs) returns (google.protobuf.Empty);
rpc DeleteCompanyJob(CompanyJobs) returns (google.protobuf.Empty);

}

message CompanyJobIdRequest{

string Id = 1;
}

message CompanyJob{

   string Id = 1;
	string Company = 2;
	google.protobuf.Timestamp ProfileCreated = 3;
	bool IsInactive = 4;
	bool IsCompanyHidden = 5;
}
message CompanyJobs{
	repeated CompanyJob ComJob=1;
}